DIAC-86 test fixes after merging in latest master